...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/file_name_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recording_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recording_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

...
            android:text="@string/all_memory" />

    </com.google.android.material.chip.ChipGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/save" />
...
